--- a/alldraws.html
+++ b/alldraws.html
@@ -55,7 +55,7 @@
                     <div class="draw-card">
                         <div class="draw-card-wrapper">
                             <div class="draw-card-avatar">
-                                <img src="/assets/images/elements/badge/avatar-1.png" />
+                                <img src="assets/images/elements/badge/avatar-1.png" />
                             </div>
                             <div class="draw-card-content">
                                 <div class="draw-card-name">
@@ -75,12 +75,12 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/success.html" class="stretched-link"></a>
+                        <a href="success.html" class="stretched-link"></a>
                     </div>
                     <div class="draw-card">
                         <div class="draw-card-wrapper">
                             <div class="draw-card-avatar">
-                                <img src="/assets/images/elements/badge/avatar-1.png" />
+                                <img src="assets/images/elements/badge/avatar-1.png" />
                             </div>
                             <div class="draw-card-content">
                                 <div class="draw-card-name">
@@ -100,12 +100,12 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/success.html" class="stretched-link"></a>
+                        <a href="success.html" class="stretched-link"></a>
                     </div>
                     <div class="draw-card">
                         <div class="draw-card-wrapper">
                             <div class="draw-card-avatar">
-                                <img src="/assets/images/elements/badge/avatar-1.png" />
+                                <img src="assets/images/elements/badge/avatar-1.png" />
                             </div>
                             <div class="draw-card-content">
                                 <div class="draw-card-name">
@@ -125,12 +125,12 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/success.html" class="stretched-link"></a>
+                        <a href="success.html" class="stretched-link"></a>
                     </div>
                     <div class="draw-card">
                         <div class="draw-card-wrapper">
                             <div class="draw-card-avatar">
-                                <img src="/assets/images/elements/badge/avatar-1.png" />
+                                <img src="assets/images/elements/badge/avatar-1.png" />
                             </div>
                             <div class="draw-card-content">
                                 <div class="draw-card-name">
@@ -150,12 +150,12 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/success.html" class="stretched-link"></a>
+                        <a href="success.html" class="stretched-link"></a>
                     </div>
                     <div class="draw-card">
                         <div class="draw-card-wrapper">
                             <div class="draw-card-avatar">
-                                <img src="/assets/images/elements/badge/avatar-1.png" />
+                                <img src="assets/images/elements/badge/avatar-1.png" />
                             </div>
                             <div class="draw-card-content">
                                 <div class="draw-card-name">
