--- a/mydraws.html
+++ b/mydraws.html
@@ -64,7 +64,7 @@
                             <div class="draw-card">
                                 <div class="draw-card-wrapper">
                                     <div class="draw-card-avatar">
-                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                        <img src="assets/images/elements/badge/avatar-1.png" />
                                     </div>
                                     <div class="draw-card-content">
                                         <div class="draw-card-name">
@@ -84,12 +84,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/success.html" class="stretched-link"></a>
+                                <a href="success.html" class="stretched-link"></a>
                             </div>
                             <div class="draw-card">
                                 <div class="draw-card-wrapper">
                                     <div class="draw-card-avatar">
-                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                        <img src="assets/images/elements/badge/avatar-1.png" />
                                     </div>
                                     <div class="draw-card-content">
                                         <div class="draw-card-name">
@@ -109,12 +109,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/success.html" class="stretched-link"></a>
+                                <a href="success.html" class="stretched-link"></a>
                             </div>
                             <div class="draw-card">
                                 <div class="draw-card-wrapper">
                                     <div class="draw-card-avatar">
-                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                        <img src="assets/images/elements/badge/avatar-1.png" />
                                     </div>
                                     <div class="draw-card-content">
                                         <div class="draw-card-name">
@@ -134,12 +134,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/success.html" class="stretched-link"></a>
+                                <a href="success.html" class="stretched-link"></a>
                             </div>
                             <div class="draw-card">
                                 <div class="draw-card-wrapper">
                                     <div class="draw-card-avatar">
-                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                        <img src="assets/images/elements/badge/avatar-1.png" />
                                     </div>
                                     <div class="draw-card-content">
                                         <div class="draw-card-name">
@@ -159,12 +159,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/success.html" class="stretched-link"></a>
+                                <a href="success.html" class="stretched-link"></a>
                             </div>
                             <div class="draw-card">
                                 <div class="draw-card-wrapper">
                                     <div class="draw-card-avatar">
-                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                        <img src="assets/images/elements/badge/avatar-1.png" />
                                     </div>
                                     <div class="draw-card-content">
                                         <div class="draw-card-name">
@@ -184,7 +184,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/success.html" class="stretched-link"></a>
+                                <a href="success.html" class="stretched-link"></a>
                             </div>
                         </div>
                     </div>
@@ -193,7 +193,7 @@
                             <div class="draw-card">
                                 <div class="draw-card-wrapper">
                                     <div class="draw-card-avatar">
-                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                        <img src="assets/images/elements/badge/avatar-1.png" />
                                     </div>
                                     <div class="draw-card-content">
                                         <div class="draw-card-name">
@@ -213,12 +213,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/success.html" class="stretched-link"></a>
+                                <a href="success.html" class="stretched-link"></a>
                             </div>
                             <div class="draw-card">
                                 <div class="draw-card-wrapper">
                                     <div class="draw-card-avatar">
-                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                        <img src="assets/images/elements/badge/avatar-1.png" />
                                     </div>
                                     <div class="draw-card-content">
                                         <div class="draw-card-name">
@@ -238,12 +238,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/success.html" class="stretched-link"></a>
+                                <a href="success.html" class="stretched-link"></a>
                             </div>
                             <div class="draw-card">
                                 <div class="draw-card-wrapper">
                                     <div class="draw-card-avatar">
-                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                        <img src="assets/images/elements/badge/avatar-1.png" />
                                     </div>
                                     <div class="draw-card-content">
                                         <div class="draw-card-name">
@@ -263,12 +263,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/success.html" class="stretched-link"></a>
+                                <a href="success.html" class="stretched-link"></a>
                             </div>
                             <div class="draw-card">
                                 <div class="draw-card-wrapper">
                                     <div class="draw-card-avatar">
-                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                        <img src="assets/images/elements/badge/avatar-1.png" />
                                     </div>
                                     <div class="draw-card-content">
                                         <div class="draw-card-name">
@@ -288,12 +288,12 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/success.html" class="stretched-link"></a>
+                                <a href="success.html" class="stretched-link"></a>
                             </div>
                             <div class="draw-card">
                                 <div class="draw-card-wrapper">
                                     <div class="draw-card-avatar">
-                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                        <img src="assets/images/elements/badge/avatar-1.png" />
                                     </div>
                                     <div class="draw-card-content">
                                         <div class="draw-card-name">
@@ -313,13 +313,13 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/success.html" class="stretched-link"></a>
+                                <a href="success.html" class="stretched-link"></a>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="bottom-button">
-                    <a href="/user.html" class="btn btn-primary btn-icon btn-menu-close w-100" menu-close>
+                    <a href="user.html" class="btn btn-primary btn-icon btn-menu-close w-100" menu-close>
                         <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
                             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <path id="Union" d="M2 9.95239L7 5L7 9L19 9L19 11L7 11L7 15L2 9.95239Z" fill="currentColor"
