--- a/user.html
+++ b/user.html
@@ -39,7 +39,7 @@
                                         <div class="user-badge-wrapper">
                                             <div class="user-badge-counter"></div>
                                             <div class="user-badge-avatar">
-                                                <img src="/assets/images/elements/badge/avatar-1.png" />
+                                                <img src="assets/images/elements/badge/avatar-1.png" />
                                             </div>
                                             <div class="user-badge-content">
                                                 <div class="user-badge-name">
@@ -153,10 +153,10 @@
                 </div>
                 <div class="row g-3">
                     <div class="col-12">
-                        <a href="/alldraws.html" class="btn btn-lg btn-primary btn-gradient w-100">Все розыгрыши</a>
+                        <a href="alldraws.html" class="btn btn-lg btn-primary btn-gradient w-100">Все розыгрыши</a>
                     </div>
                     <div class="col-12">
-                        <a href="/mydraws.html" class="btn btn-lg btn-blue btn-colored btn-dimmed w-100">Мои
+                        <a href="mydraws.html" class="btn btn-lg btn-blue btn-colored btn-dimmed w-100">Мои
                             розыгрыши</a>
                     </div>
                 </div>
