--- a/error.html
+++ b/error.html
@@ -34,13 +34,13 @@
                         <div class="sticky-block-wrapper" menu-toggle="">
                             <div class="sticky-block-group">
                                 <div class="sticky-block-icon">
-                                    <img src="/assets/images/elements/badge/avatar-1.png" />
+                                    <img src="assets/images/elements/badge/avatar-1.png" />
                                 </div>
                                 <div class="sticky-block-icon">
-                                    <img src="/assets/images/elements/badge/avatar-1.png" />
+                                    <img src="assets/images/elements/badge/avatar-1.png" />
                                 </div>
                                 <div class="sticky-block-icon">
-                                    <img src="/assets/images/elements/badge/avatar-1.png" />
+                                    <img src="assets/images/elements/badge/avatar-1.png" />
                                 </div>
                             </div>
                             <div class="sticky-block-text">
@@ -107,7 +107,7 @@
                             <div class="row g-4 align-items-center">
                                 <div class="col-auto">
                                     <div class="card-link-icon">
-                                        <img src="/assets/images/elements/card/link/demo.png" />
+                                        <img src="assets/images/elements/card/link/demo.png" />
                                     </div>
                                 </div>
                                 <div class="col">
@@ -155,7 +155,7 @@
                         <div class="user-card-wrapper">
                             <div class="user-card-counter"></div>
                             <div class="user-card-avatar">
-                                <img src="/assets/images/elements/badge/avatar-1.png" />
+                                <img src="assets/images/elements/badge/avatar-1.png" />
                             </div>
                             <div class="user-card-content">
                                 <div class="user-card-name">
@@ -176,7 +176,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/user.html" class="stretched-link"></a>
+                        <a href="user.html" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
