--- a/exist.html
+++ b/exist.html
@@ -81,7 +81,7 @@
                                                     </svg>
                                                 </div>
                                             </div>
-                                            <a href="/mydraws.html" class="stretched-link"></a>
+                                            <a href="mydraws.html" class="stretched-link"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -110,7 +110,7 @@
                             <div class="row g-4 align-items-center">
                                 <div class="col-auto">
                                     <div class="card-link-icon">
-                                        <img src="/assets/images/elements/card/link/demo.png" />
+                                        <img src="assets/images/elements/card/link/demo.png" />
                                     </div>
                                 </div>
                                 <div class="col">
