--- a/finish.html
+++ b/finish.html
@@ -34,13 +34,13 @@
                         <div class="sticky-block-wrapper" menu-toggle="">
                             <div class="sticky-block-group">
                                 <div class="sticky-block-icon">
-                                    <img src="/assets/images/elements/badge/avatar-1.png" />
+                                    <img src="assets/images/elements/badge/avatar-1.png" />
                                 </div>
                                 <div class="sticky-block-icon">
-                                    <img src="/assets/images/elements/badge/avatar-1.png" />
+                                    <img src="assets/images/elements/badge/avatar-1.png" />
                                 </div>
                                 <div class="sticky-block-icon">
-                                    <img src="/assets/images/elements/badge/avatar-1.png" />
+                                    <img src="assets/images/elements/badge/avatar-1.png" />
                                 </div>
                             </div>
                             <div class="sticky-block-text">
@@ -125,7 +125,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <a href="/user.html" class="stretched-link"></a>
+                            <a href="user.html" class="stretched-link"></a>
                         </div>
                     </div>
                     <div class="col-12">
@@ -151,7 +151,7 @@
                         <div class="user-card-wrapper">
                             <div class="user-card-counter"></div>
                             <div class="user-card-avatar">
-                                <img src="/assets/images/elements/badge/avatar-1.png" />
+                                <img src="assets/images/elements/badge/avatar-1.png" />
                             </div>
                             <div class="user-card-content">
                                 <div class="user-card-name">
@@ -172,7 +172,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/user.html" class="stretched-link"></a>
+                        <a href="user.html" class="stretched-link"></a>
                     </div>
                 </div>
             </div>
