--- a/winner.html
+++ b/winner.html
@@ -50,12 +50,12 @@
                                                     </div>
                                                 </div>
                                                 <div class="winner-card-image">
-                                                    <img src="/assets/images/elements/cup/gold.png" />
+                                                    <img src="assets/images/elements/cup/gold.png" />
                                                 </div>
                                                 <div class="winner-card-content">
                                                     <div class="winner-badge">
                                                         <div class="winner-badge-avatar">
-                                                            <img src="/assets/images/elements/badge/avatar-1.png" />
+                                                            <img src="assets/images/elements/badge/avatar-1.png" />
                                                         </div>
                                                         <div class="winner-badge-content">
                                                             <div class="winner-badge-name">
@@ -65,7 +65,7 @@
                                                                 Победитель розыгрыша
                                                             </div>
                                                         </div>
-                                                        <a href="/user.html" class="stretched-link"></a>
+                                                        <a href="user.html" class="stretched-link"></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -86,12 +86,12 @@
                                                     </div>
                                                 </div>
                                                 <div class="winner-card-image">
-                                                    <img src="/assets/images/elements/cup/silver.png" />
+                                                    <img src="assets/images/elements/cup/silver.png" />
                                                 </div>
                                                 <div class="winner-card-content">
                                                     <div class="winner-badge winner-badge-glass">
                                                         <div class="winner-badge-avatar">
-                                                            <img src="/assets/images/elements/badge/avatar-1.png" />
+                                                            <img src="assets/images/elements/badge/avatar-1.png" />
                                                         </div>
                                                         <div class="winner-badge-content">
                                                             <div class="winner-badge-name">
@@ -101,7 +101,7 @@
                                                                 Победитель розыгрыша
                                                             </div>
                                                         </div>
-                                                        <a href="/user.html" class="stretched-link"></a>
+                                                        <a href="user.html" class="stretched-link"></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -122,12 +122,12 @@
                                                     </div>
                                                 </div>
                                                 <div class="winner-card-image">
-                                                    <img src="/assets/images/elements/cup/bronze.png" />
+                                                    <img src="assets/images/elements/cup/bronze.png" />
                                                 </div>
                                                 <div class="winner-card-content">
                                                     <div class="winner-badge">
                                                         <div class="winner-badge-avatar">
-                                                            <img src="/assets/images/elements/badge/avatar-1.png" />
+                                                            <img src="assets/images/elements/badge/avatar-1.png" />
                                                         </div>
                                                         <div class="winner-badge-content">
                                                             <div class="winner-badge-name">
@@ -137,7 +137,7 @@
                                                                 Победитель розыгрыша
                                                             </div>
                                                         </div>
-                                                        <a href="/user.html" class="stretched-link"></a>
+                                                        <a href="user.html" class="stretched-link"></a>
                                                     </div>
                                                 </div>
                                             </div>
@@ -165,7 +165,7 @@
                                 <div class="user-card-wrapper">
                                     <div class="user-card-counter"></div>
                                     <div class="user-card-avatar">
-                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                        <img src="assets/images/elements/badge/avatar-1.png" />
                                     </div>
                                     <div class="user-card-content">
                                         <div class="user-card-name">
@@ -187,13 +187,13 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/user.html" class="stretched-link"></a>
+                                <a href="user.html" class="stretched-link"></a>
                             </div>
                             <div class="user-card">
                                 <div class="user-card-wrapper">
                                     <div class="user-card-counter"></div>
                                     <div class="user-card-avatar">
-                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                        <img src="assets/images/elements/badge/avatar-1.png" />
                                     </div>
                                     <div class="user-card-content">
                                         <div class="user-card-name">
@@ -215,13 +215,13 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/user.html" class="stretched-link"></a>
+                                <a href="user.html" class="stretched-link"></a>
                             </div>
                             <div class="user-card">
                                 <div class="user-card-wrapper">
                                     <div class="user-card-counter"></div>
                                     <div class="user-card-avatar">
-                                        <img src="/assets/images/elements/badge/avatar-1.png" />
+                                        <img src="assets/images/elements/badge/avatar-1.png" />
                                     </div>
                                     <div class="user-card-content">
                                         <div class="user-card-name">
@@ -243,7 +243,7 @@
                                         </div>
                                     </div>
                                 </div>
-                                <a href="/user.html" class="stretched-link"></a>
+                                <a href="user.html" class="stretched-link"></a>
                             </div>
                         </div>
                     </div>
