--- a/finish.html
+++ b/finish.html
@@ -75,8 +75,8 @@
                                 </div>
                                 <div class="col-12">
                                     <div class="section-main-text text-center text-white">
-                                        <div class="fs-lg fw-600">Розыгрыш завершен!</div>
-                                        <span class="fw-500">
+                                        <div class="fs-lg fw-600 mb-2">Розыгрыш завершен!</div>
+                                        <span class="fw-500 pt-1">
                                             Вам обязательно повезет в следующий раз, не унывайте :)
                                         </span>
                                     </div>
