--- a/alldraws.html
+++ b/alldraws.html
@@ -175,11 +175,11 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="/success.html" class="stretched-link"></a>
+                        <a href="success.html" class="stretched-link"></a>
                     </div>
                 </div>
                 <div class="bottom-button">
-                    <a href="/user.html" class="btn btn-primary btn-icon btn-menu-close w-100" menu-close>
+                    <a href="user.html" class="btn btn-primary btn-icon btn-menu-close w-100" menu-close>
                         <svg width="20.000000" height="20.000000" viewBox="0 0 20 20" fill="none"
                             xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
                             <path id="Union" d="M2 9.95239L7 5L7 9L19 9L19 11L7 11L7 15L2 9.95239Z" fill="currentColor"
