Кнопка "Показать ещё"

--- a/invalid.html
+++ b/invalid.html
@@ -161,6 +161,15 @@
                         </div>
                         <a href="user.html" class="stretched-link"></a>
                     </div>
+                    <button type="button" class="btn btn-lg btn-blue btn-icon btn-more" items-show-more>
+                        <span class="btn-icon-text">Показать ещё</span>
+                        <svg width="18.000000" height="18.000000" viewBox="0 0 18 18" fill="none"
+                            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                            <path id="icon"
+                                d="M2.36426 6.06665L3.63672 4.79395L9.18848 10.345L14.7393 4.79395L16.0117 6.06665L9.18848 12.8906L2.36426 6.06665Z"
+                                fill="currentColor" fill-opacity="0.500000" fill-rule="evenodd" />
+                        </svg>
+                    </button>
                 </div>
             </div>
             <div class="menu-close">
